--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "koha-plugin-edifact-enhanced",
   "description": "Koha Edifact Enhanced Plugin",
-  "version": "2.1.17",
-  "previous_version": "2.1.16",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
@@ -26,5 +24,7 @@
     "datetime": "0.0.3",
     "jsonfile": "^4.0.0",
     "node-datetime": "^2.0.0"
-  }
+  },
+  "version": "2.1.17",
+  "previous_version": "2.1.16"
 }
