--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,6 @@ jobs:
 
       script:
         - if [ ! -f INSTALLATION/INSTALLATION.adoc ]; then exit 0; fi
-        - printf 'BRANCH: \%s' $TRAVIS_BRANCH
         - docker run -v $TRAVIS_BUILD_DIR:/documents/ --name asciidoc-to-pdf asciidoctor/docker-asciidoctor asciidoctor-pdf -D /documents/output INSTALLATION/INSTALLATION.adoc
 
       after_error:
@@ -44,6 +43,7 @@ jobs:
 
       after_success:
         - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then exit 0; fi
+        - ls -alh $TRAVIS_BUILD_DIR/documents/output/
         - cp $TRAVIS_BUILD_DIR/documents/output/INSTALLATION.pdf INSTALLATION/INSTALLATION.pdf
         - git status
         - git config user.name "Kyle M Hall"
