Revert "Travis CI - Run KZP builder and Documentation stages in parallel"
This reverts commit 6fc99cea68f678dac3be240b24b7469d6133af1f.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ sudo: required
 
 jobs:
   include:
-    - stage: Deploy
-      env: NAME="Deploy KPZ file"
+    - stage: Deploy kpz file
       language: node_js
       node_js:
         - "8"
@@ -22,8 +21,7 @@ jobs:
       script:
         - bash deploy.sh
 
-    - stage: Deploy
-      env: NAME="Update documentation PDF"
+    - stage: Update documentation PDF
       services:
         - docker
 
