--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ jobs:
       node_js:
         - "8"
 
+      before_install:
+        - echo "$TRAVIS_TAG"
+        - if [ "$TRAVIS_TAG" != "" ]; then exit 0; fi
+
       install:
         - echo $TRAVIS_BRANCH
         - echo $TRAVIS_JOB_ID
