--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        koha-version: [oldstable]
-        #koha-version: [master, stable, oldstable]
+        koha-version: [master, stable, oldstable]
 
     steps:
 
