Pass github token as environment variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -194,3 +194,5 @@ jobs:
 
     - name: Print minimum version
       run: TAG=${GITHUB_REF##*/} ./rebase_branches.sh
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
