--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -192,7 +192,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Print minimum version
+    - name: Run rebase_branches.sh
       run: TAG=${GITHUB_REF##*/} ./rebase_branches.sh
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
