--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -184,7 +184,7 @@ jobs:
 
   rebase:
     name: Rebase other branches
-    if: ${{ !contains(github.ref, '-') }}
+    if: ${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-') }}
     runs-on: ubuntu-latest
     needs: unit_tests
     strategy:
