--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koha-plugin-edifact-enhanced",
-  "description": "Koha Edifact Enhanced Plugin",
+  "name": "koha-plugin-edifact-enhanced-UniversalLibraryServices",
+  "description": "Koha Edifact Enhanced Plugin - Universal Library Services",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
