--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koha-plugin-edifact-enhanced-Libraria",
-  "description": "Koha Edifact Enhanced Plugin-Libraria",
+  "name": "koha-plugin-edifact-enhanced",
+  "description": "Koha Edifact Enhanced Plugin",
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
