--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -196,7 +196,7 @@ jobs:
     name: Rebase other branches
     if: ${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-') }}
     runs-on: ubuntu-latest
-    #needs: unit_tests
+    needs: unit_tests
     strategy:
       fail-fast: false
     steps:
