--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,9 @@ jobs:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
 
+    - name: list all files
+      run: pwd; find . -type f
+
     - uses: actions/checkout@v1
 
     - name: Get Koha Version Branch Name
@@ -134,6 +137,9 @@ jobs:
       fail-fast: false
     steps:
     - uses: actions/checkout@v1
+
+    - name: list all files
+      run: pwd; find . -type f
 
     - name: Parse out and store the GitHub repository name
       id: myvars
