--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -212,6 +212,7 @@ jobs:
       run: TAG=${GITHUB_REF##*/} ./rebase_branches.pl
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        GH_USERNAME: ${{ secrets.GH_USERNAME }}
 
   keepalive:
     name: Keep Alive
