GHA - Update github actions files

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "koha-plugin-edifact-enhanced",
+  "version": "2.6.3",
   "description": "Koha Edifact Enhanced Plugin",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-cli": "^1.2.2",
-    "gulp-github-release": "^1.1.5",
-    "gulp-run": "^1.7.1"
+    "gulp": "^4.0.2",
+    "gulp-cli": "^3.0.0",
+    "vinyl": "^3.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preversion": "sed -i -e \"s/^our \\$VERSION = .*/our \\$VERSION = \\\"$npm_new_version\\\";/\" Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced.pm; git add -u; rm -f Koha/Plugin/Com/ByWaterSolutions/EdifactEnhanced.pm-e",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "kpz": "node -e \"console.log(process.env.npm_package_name + '-v' + process.env.npm_package_version + '.kpz')\"",
+    "print-name": "node -e \"console.log(process.env.npm_package_name)\"",
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -21,10 +25,6 @@
   },
   "homepage": "https://github.com/bywatersolutions/koha-plugin-edifact-enhanced#readme",
   "dependencies": {
-    "datetime": "0.0.3",
-    "jsonfile": "^4.0.0",
     "node-datetime": "^2.0.0"
-  },
-  "version": "2.1.74",
-  "previous_version": "2.1.73"
+  }
 }
