GHA - Install extra Perl libs needed from CPAN

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,10 @@ jobs:
         export KTD_HOME=$(pwd)
         ktd --name edifact --wait-ready 120
 
+    - name: Install extra CPAN modules the plugin needs
+      run: |
+        ktd --shell --run "cpanm Business::Barcode::EAN13"
+
     - name: Run plugin tests
       run: |
         export KTD_HOME=$(pwd)/../koha-testing-docker
