--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Install extra CPAN modules the plugin needs
       run: |
         export KTD_HOME=$(pwd)/../koha-testing-docker
-        ktd --name edifact --shell --run "cpanm Business::Barcode::EAN13"
+        ktd --name edifact --shell --run "sudo cpanm Business::Barcode::EAN13"
 
     - name: Run plugin tests
       run: |
