--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,6 +161,22 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  rebase:
+    name: Rebase other branches
+    if: ${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-') }}
+    runs-on: ubuntu-latest
+    #needs: unit_tests
+    strategy:
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Run rebase_branches.pl
+      run: TAG=${GITHUB_REF##*/} ./rebase_branches.pl
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        GH_USERNAME: ${{ secrets.GH_USERNAME }}
+
   keepalive:
     name: Keep Alive
     runs-on: ubuntu-latest
